<resources>
    <string name="app_name">GlennOrtizN01523016</string>
    <string name="enterbutton">Enter</string>
    <string name="apartment_visit_screen">Apartment Visit Screen</string>
    <string name="apartment">Apartment</string>
    <string name="detachedHome">Detached Home</string>
    <string name="semidetachedHome">Semi Detached Home</string>
    <string name="apartment_1">Apartment 1</string>
    <string name="apartment_2">Apartment 2</string>
    <string name="apartment_3">Apartment 3</string>
    <string name="rent_a3">$1000</string>
    <string name="rent_a2">$800</string>
    <string name="rent_a1">$500</string>
    <string name="address1">181 Jeffcoat Dr.</string>
    <string name="address2">123 Kingsview Blvd.</string>
    <string name="address3">1234 John Garland</string>
    <string name="proceed_to_payment">Proceed To Payment</string>
    <string name="HousingCheckboxToast">Please Select A valid Option or Go Back to Main Screen</string>
    <string name="rentValidation">Please Select a Valid home  Type</string>
    <string name="enter_cardholder_name">Enter Cardholder Name</string>
    <string name="enter_credit_card_number">Enter Credit Card Number</string>
    <string name="ccNameErrorTxt">Minimum Name Length is 3</string>
    <string name="ccNumberErrorText">Credit Card Number must have 16 Digits</string>
    <string name="succesPaymentTxt">Your Request is being processed</string>
    <string name="detached_visit_screen">Detached Visit Screen</string>
    <string name="detached_1">Detached 1\n</string>
    <string name="detached_2">Detached 2\n</string>
    <string name="detached1">125 Bayview Blvd.</string>
    <string name="rent_d1">$5200</string>
    <string name="detached_3">Detached 3</string>
    <string name="detached2">9517 Milwaukee</string>
    <string name="rent_d2">$9000</string>
    <string name="detached3">"984 Toronto "</string>
    <string name="rent_d3">$10000</string>
    <string name="semidetached_visit_screen">Semi Detached Visit Screen</string>
    <string name="semidetached_1">Semi Detached 1</string>
    <string name="semidetached_2">Semi Detached 2</string>
    <string name="semidetached_3">Semi Detached 3</string>
    <string name="semiadd1">1234 Dixon rd.</string>
    <string name="rent_s1">$1200</string>
    <string name="semiadd2">35548 kipling ave.</string>
    <string name="rent_s2">$2000</string>
    <string name="semiadd3">984 Islington</string>
    <string name="rent_s3">$2100</string>
    <string name="back">Back</string>
    <string name="Help">Help</string>
    <string name="phone">tel:437833737</string>
</resources>