<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ar3_800"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ortizsplasher">

    <TextView
        android:id="@+id/OrtizApartmentScreenTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#D37502"
        android:fontFamily="monospace"
        android:text="@string/apartment_visit_screen"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105"
        app:layout_wrapBehaviorInParent="included" />

    <CheckBox
        android:id="@+id/Apartment1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#D27502"
        android:text="@string/apartment_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.204" />

    <CheckBox
        android:id="@+id/Apartment2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#D27502"
        android:text="@string/apartment_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.399" />

    <CheckBox
        android:id="@+id/Apartment3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#D27502"
        android:text="@string/apartment_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.601" />

    <TextView
        android:id="@+id/address_a1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#D17502"
        android:text="@string/address1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.275" />

    <TextView
        android:id="@+id/ar1_500"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#D17502"
        android:text="@string/rent_a1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.314" />

    <TextView
        android:id="@+id/address_a2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#D17502"
        android:text="@string/address2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.463" />

    <TextView
        android:id="@+id/ar2_800"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#D17502"
        android:text="@string/rent_a2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/address_a3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#D17502"
        android:text="@string/address3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.674" />

    <TextView
        android:id="@+id/ar3_1000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#D17502"
        android:text="@string/rent_a3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.716" />

    <Button
        android:id="@+id/PaymentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proceed_to_payment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.838" />

</androidx.constraintlayout.widget.ConstraintLayout>