<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ar3_800"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ortizsplasher">



    <TextView
        android:id="@+id/OrtizSemiDetachedScreenTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#74EA2A"
        android:fontFamily="monospace"
        android:text="@string/semidetached_visit_screen"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105"
        app:layout_wrapBehaviorInParent="included" />

    <CheckBox
        android:id="@+id/semiDetached1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#74EA2A"
        android:text="@string/semidetached_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.204" />

    <CheckBox
        android:id="@+id/semiDetached2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#74EA2A"
        android:text="@string/semidetached_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.399" />

    <CheckBox
        android:id="@+id/semiDetached3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#74EA2A"
        android:text="@string/semidetached_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.601" />

    <TextView
        android:id="@+id/address_s1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#74EA2A"
        android:text="@string/semiadd1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.275" />

    <TextView
        android:id="@+id/sr1_1200"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#74EA2A"
        android:text="@string/rent_s1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.314" />

    <TextView
        android:id="@+id/address_s2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#74EA2A"
        android:text="@string/semiadd2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.463" />

    <TextView
        android:id="@+id/sr2_2000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#74EA2A"
        android:text="@string/rent_s2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/address_s3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#74EA2A"
        android:text="@string/semiadd3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.674" />

    <TextView
        android:id="@+id/ar3_2100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#74EA2A"
        android:text="@string/rent_s3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.716" />

    <Button
        android:id="@+id/PaymentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proceed_to_payment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.838" />

</androidx.constraintlayout.widget.ConstraintLayout>