<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ar3_800"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ortizsplasher">



    <TextView
        android:id="@+id/OrtizDetachedScreenTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#D1CA9D"
        android:fontFamily="monospace"
        android:text="@string/detached_visit_screen"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105"
        app:layout_wrapBehaviorInParent="included" />

    <CheckBox
        android:id="@+id/Detached1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#D1CA9D"
        android:text="@string/detached_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.204" />

    <CheckBox
        android:id="@+id/Detached2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#D1CA9D"
        android:text="@string/detached_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.399" />

    <CheckBox
        android:id="@+id/Detached3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#D1CA9D"
        android:text="@string/detached_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.601" />

    <TextView
        android:id="@+id/address_d1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#D1CA9D"
        android:text="@string/detached1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.275" />

    <TextView
        android:id="@+id/dr1_5200"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#D1CA9D"
        android:text="@string/rent_d1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.316" />

    <TextView
        android:id="@+id/address_d2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#D1CA9D"
        android:text="@string/detached2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.463" />

    <TextView
        android:id="@+id/dr2_9000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#D1CA9D"
        android:text="@string/rent_d2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.514"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/address_d3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#D1CA9D"
        android:text="@string/detached3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.674" />

    <TextView
        android:id="@+id/dr3_10000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#D1CA9D"
        android:text="@string/rent_d3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.716" />

    <Button
        android:id="@+id/PaymentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proceed_to_payment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.838" />


</androidx.constraintlayout.widget.ConstraintLayout>