<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RentActivity"
    android:background="@drawable/ortizsplasher">

    <RadioGroup
        android:id="@+id/ortizradiogrouprent"
        android:layout_width="226dp"
        android:layout_height="164dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="87dp"
        android:layout_marginTop="283dp"
        android:layout_marginEnd="98dp"
        android:layout_marginBottom="283dp"
        android:background="#DABD9D"
        android:backgroundTint="#531313"
        android:backgroundTintMode="add"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <RadioButton
            android:id="@+id/apartmentButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apartment" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/detachedHomeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detachedHome" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/semidetachedHomeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/semidetachedHome" />
    </RadioGroup>

    <ImageButton
        android:id="@+id/ortizmoneybutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ortizradiogrouprent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="159dp"
        android:layout_marginTop="479dp"
        android:layout_marginEnd="158dp"
        android:layout_marginBottom="162dp"
        android:adjustViewBounds="true"
        android:maxWidth="60dp"
        android:maxHeight="60dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/ortizapartmenticon" />


</RelativeLayout>